# biodiversity-detector

./: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.integration-test  Dockerfile.kernel-test  Dockerfile.sim  Makefile  README.md  RENODE_IMPROVEMENTS.md  apply_instructions.json  docker-compose.sim.yml  docker-compose.yml
assets/models/: motoserra_detect_v1.tflite
docs/architecture/: README.md  firmware_components.md  high_level.md  technical_details.md
openspec/: config.yaml
openspec/changes/add-integration-with-telegram-to-notify/: design.md  proposal.md  tasks.md
openspec/changes/add-lorawan-mesh-network/: tasks.md
openspec/changes/add-motoserra-detection/: design.md  proposal.md  tasks.md
openspec/changes/add-rust-kernel-module-v1/: design.md  tasks.md
openspec/changes/dma-interface/: design.md  proposal.md  tasks.md
openspec/changes/esp32-s3-simulation-on-espressif-qemu/: design.md  proposal.md  tasks.md
openspec/changes/esp32-s3-simulation-on-renode/: design.md  proposal.md  tasks.md
openspec/changes/fauna-flora-detection/: design.md  proposal.md  tasks.md
openspec/changes/firmware-to-esp-32-s3-cpp-otimizations/: design.md  proposal.md  tasks.md
openspec/changes/firmware-to-esp32-s3/: design.md  proposal.md  tasks.md
openspec/changes/firmware-to-esp32-s3-cpp/: design.md  proposal.md  tasks.md
openspec/changes/firmware-to-esp32-s3-cpp-inference-engine-real-implementation/: design.md  tasks.md
openspec/changes/firmware-to-esp32-s3-cpp-no-raw-pointers/: proposal.md  tasks.md
openspec/changes/motosserra-detection-esp-lora-version/: proposal.md  tasks.md
openspec/changes/motosserra-detection-web-manager-app/: design.md  proposal.md  tasks.md
openspec/changes/node-location-propagation/: design.md  proposal.md  tasks.md
openspec/changes/real-guardian-audio-impl/: design.md  proposal.md
openspec/changes/renode-simulation/: design.md  proposal.md  tasks.md
openspec/changes/simulate-5-node-mesh-network/: design.md  tasks.md
openspec/changes/system-architecture-documentation/: design.md  proposal.md  tasks.md
renode/: README.md  audio_mock_script.py  energy_monitor.py  esp32s3-main.resc  esp32s3.repl  mesh-sim.resc  test.repl
scripts/: apply_license.sh  build_firmware.sh  launch_host_mesh.sh  mock_sensor.py  musa_simulation_test.sh  qemu_runner.py  renode_runner.py  run_full_simulation.sh  run_renode_simulation.sh  sim_visualizer.py  test-integration.sh  test-kernel-module.sh  verify_fauna_flora.py  verify_localization.sh
src/: AlertManager.cpp  AlertManager.hpp  main.cpp
src/ai/: DetectionEngine.cpp  DetectionEngine.hpp  EdgeImpulseWrapper.cpp  EdgeImpulseWrapper.hpp
src/audio/: AudioIn.cpp  AudioIn.hpp  CascadeFilter.cpp  CascadeFilter.hpp  CircularBuffer.hpp
src/esp32/: Cargo.toml
src/esp32-s3-cpp/: CMakeLists.txt  DEVELOPMENT.md  README.md  sdkconfig.defaults
src/esp32-s3-cpp/main/: CMakeLists.txt  audio_buffer.cpp  audio_buffer.hpp  audio_capture.cpp  audio_capture.hpp  battery_monitor.cpp  battery_monitor.hpp  dsp_analyzer.cpp  dsp_analyzer.hpp  esp_lora_driver.cpp  esp_lora_driver.hpp  i2s_low_level.cpp  i2s_low_level.hpp  idf_component.yml  inference_engine.cpp  inference_engine.hpp  localization_module.cpp  localization_module.hpp  main.cpp  memory_helpers.hpp  model_data.hpp  shared_ring_buffer.cpp  shared_ring_buffer.hpp  telemetry_manager.cpp  telemetry_manager.hpp
src/esp32/src/: main.rs  (+5 more)
src/kernel/: .guardian_audio.mod.cmd  Kbuild  Makefile  bcm2837_regs.rs  guardian_audio.ko  guardian_audio.mod  libmock_kernel.rlib  mock_kernel.rs  module_guardian_audio.rs  scripts  target.json
src/telemetry/: AlertFormatter.hpp  ConfigParser.cpp  ConfigParser.hpp  LoRaDriver.cpp  LoRaDriver.hpp  LocalizationEngine.cpp  LocalizationEngine.hpp  MeshProtocol.cpp  MeshProtocol.hpp  OfflineQueue.hpp  PhysicalLoRaDriver.cpp  PhysicalLoRaDriver.hpp  RTCStore.cpp  RTCStore.hpp  SimulatedLoRaDriver.cpp  SimulatedLoRaDriver.hpp  SupabaseClient.hpp  TelegramClient.cpp  TelegramClient.hpp  localization_module.cpp
src/utils/: compat.hpp
src/web-manager/: vercel.json
tests/unit/: test_localization.cpp
(+100 files in other folders)
