idf_component_register(SRCS "main.cpp"
                           "audio_capture.cpp"
                           "audio_buffer.cpp"
                           "dsp_analyzer.cpp"
                           "inference_engine.cpp"
                           "esp_lora_driver.cpp"
                           "battery_monitor.cpp"
                           "telemetry_manager.cpp"
                           "i2s_low_level.cpp"
                           "shared_ring_buffer.cpp"
                           "localization_module.cpp"
                    INCLUDE_DIRS "."
                    REQUIRES esp_timer esp_system esp_driver_spi esp_adc esp_driver_gpio hal esp_rom esp_driver_i2s)
